[gd_scene load_steps=8 format=2]

[ext_resource path="res://JesusSaves/assets/fonts/m5x7_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Focussed.tres" type="StyleBox" id=2]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Pressed2.tres" type="StyleBox" id=3]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Hover2.tres" type="StyleBox" id=4]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Normal2.tres" type="StyleBox" id=5]
[ext_resource path="res://JesusSaves/assets/fonts/m5x7_32.tres" type="DynamicFont" id=6]
[ext_resource path="res://JesusSaves/src/UserInterface/OptionsMenu/OptionsMenu.gd" type="Script" id=7]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPanel" type="Panel" parent="Panel/HSplitContainer"]
margin_right = 300.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HSplitContainer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/HSplitContainer/MenuPanel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "OPTIONS"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HSplitContainer/MenuPanel/VBoxContainer"]
margin_top = 55.0
margin_right = 300.0
margin_bottom = 195.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer"]
margin_right = 300.0
margin_bottom = 140.0

[node name="Video" type="Button" parent="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 32.526
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "VIDEO"

[node name="Sound" type="Button" parent="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 68.526
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "SOUND"

[node name="Controls" type="Button" parent="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 104.526
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "CONTROLS"

[node name="Back" type="Button" parent="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 300.0
margin_bottom = 140.526
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "BACK"

[node name="OptionsPanel" type="Panel" parent="Panel/HSplitContainer"]
margin_left = 312.0
margin_right = 960.0
margin_bottom = 540.0
[connection signal="pressed" from="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/MenuPanel/VBoxContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
